--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,14 @@
   text-align: center;
 }
 
+.main h3:first-child {
+  margin-top: 20px;
+}
+
+.main h3:not(:first-child) {
+  margin-top: 60px;
+}
+
 .main p {
   font-size: 16pt;
   margin: 20px 0;
